--- a/flink-doitedueagle/pom.xml
+++ b/flink-doitedueagle/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>flink-connector-kafka_${scala.binary.version}</artifactId>
             <version>${flink.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-shaded-guava</artifactId>
+            <version>18.0-13.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.alibaba</groupId>
