--- a/doit30-flink/pom.xml
+++ b/doit30-flink/pom.xml
@@ -175,6 +175,16 @@
             <artifactId>flink-shaded-guava</artifactId>
             <version>30.1.1-jre-14.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-csv</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-core</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
 
 
 
