--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>flink-learn</module>
         <module>flink-common</module>
         <module>flink-cdc</module>
+        <module>flink-sql</module>
     </modules>
 
     <properties>
