--- a/flink-sql/pom.xml
+++ b/flink-sql/pom.xml
@@ -17,9 +17,10 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala.binary.version>2.12</scala.binary.version>
-        <flink.version>1.14.4</flink.version>
+        <flink.version>1.14.6</flink.version>
         <log4j.version>2.18.0</log4j.version>
         <slf4j.version>1.7.30</slf4j.version>
+        <scala.version>2.12.8</scala.version>
     </properties>
 
     <dependencies>
@@ -167,6 +168,17 @@
             <artifactId>flink-common</artifactId>
             <version>1.0-SNAPSHOT</version>
 <!--            <scope>compile</scope>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>${scala.version}</version>
         </dependency>
 
     </dependencies>
