--- a/flink-dependencies/pom.xml
+++ b/flink-dependencies/pom.xml
@@ -14,9 +14,9 @@
     <packaging>pom</packaging>
     <modules>
         <module>yzhou-flink-1.17</module>
-        <module>dinky-flink-1.16</module>
-        <module>dinky-flink-1.15</module>
-        <module>dinky-flink-1.14</module>
+        <module>yzhou-flink-1.16</module>
+        <module>yzhou-flink-1.15</module>
+        <module>yzhou-flink-1.14</module>
     </modules>
 
     <properties>
