--- a/flink-dependencies/yzhou-flink-1.16/pom.xml
+++ b/flink-dependencies/yzhou-flink-1.16/pom.xml
@@ -9,71 +9,34 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>dinky-flink-1.15</artifactId>
+    <artifactId>yzhou-flink-1.16</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <commons.version>1.3.1</commons.version>
-        <flink.guava.version>15.0</flink.guava.version>
-        <flink.version>1.15.2</flink.version>
+        <flink.guava.version>16.0</flink.guava.version>
+        <flink.version>1.16.0</flink.version>
         <flinkcdc.version>2.3.0</flinkcdc.version>
-        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-shaded-hadoop-3-uber -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-python_2.12</artifactId>
-            <version>${flink.version}</version>
+            <artifactId>flink-shaded-hadoop-3-uber</artifactId>
+            <version>3.1.1.7.2.9.0-173-9.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-api-java-bridge</artifactId>
-            <version>${flink.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-api-scala-bridge_2.12</artifactId>
-            <version>${flink.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-runtime</artifactId>
+            <artifactId>flink-python</artifactId>
             <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-planner_2.12</artifactId>
-            <version>${flink.version}</version>
-        </dependency>
-        <!-- You need to add this dependency before completing the dinky-connector-jdbc-1.15 module to prevent running exceptions when using version flink-1.15,
-        and you need to put the flink-connector-jdbc-1.15.*.jar in the /dinky/lib/ directory to replace dinky-connector-jdbc-1.13-0.6.6-SNAPSHOT.jar during deployment-->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-jdbc</artifactId>
-            <version>${flink.version}</version>
-        </dependency>
-        <!-- end-->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-core</artifactId>
-            <version>${flink.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-common</artifactId>
-            <version>${flink.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-api-java</artifactId>
-            <version>${flink.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients</artifactId>
             <version>${flink.version}</version>
             <exclusions>
                 <exclusion>
@@ -84,9 +47,28 @@
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-jdbc</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-api-scala-bridge_2.12</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-common</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
             <artifactId>flink-yarn</artifactId>
             <version>${flink.version}</version>
             <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
                 <exclusion>
                     <groupId>org.apache.hadoop</groupId>
                     <artifactId>hadoop-yarn-common</artifactId>
@@ -134,28 +116,14 @@
             <artifactId>flink-sql-connector-oracle-cdc</artifactId>
             <version>${flinkcdc.version}</version>
         </dependency>
-
-        <!-- starrocks-connector-->
-        <dependency>
-            <groupId>com.starrocks</groupId>
-            <artifactId>flink-connector-starrocks</artifactId>
-            <version>1.2.6_flink-1.15</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.github.jsqlparser</groupId>
-                    <artifactId>jsqlparser</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <!-- postgres-connector-->
         <dependency>
             <groupId>com.ververica</groupId>
-            <artifactId>flink-sql-connector-postgres-cdc</artifactId>
+            <artifactId>flink-sql-connector-sqlserver-cdc</artifactId>
             <version>${flinkcdc.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ververica</groupId>
-            <artifactId>flink-sql-connector-sqlserver-cdc</artifactId>
+            <artifactId>flink-sql-connector-postgres-cdc</artifactId>
             <version>${flinkcdc.version}</version>
         </dependency>
         <dependency>
@@ -165,8 +133,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.doris</groupId>
-            <artifactId>flink-doris-connector-1.15</artifactId>
-            <version>1.2.1</version>
+            <artifactId>flink-doris-connector-1.16</artifactId>
+            <version>1.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -174,5 +142,12 @@
             <version>${flink.version}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+        </repository>
+    </repositories>
 
 </project>
