--- a/flink-connectors/pom.xml
+++ b/flink-connectors/pom.xml
@@ -7,11 +7,15 @@
         <groupId>com.yzhou</groupId>
         <artifactId>flink-tutorial</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>com.xinzhuxiansheng.javaproject</groupId>
-    <artifactId>flink-connector-http</artifactId>
+    <artifactId>flink-connectors</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>flink-connector-http-1.15</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
