--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
         <module>flink-common</module>
         <module>flink-cdc</module>
         <module>flink-sql</module>
-        <module>flink-connector</module>
-        <module>flink-connector/flink-connector-http</module>
+        <module>flink-connectors</module>
         <module>flink-dependencies</module>
     </modules>
 
