--- a/flink-sql/pom.xml
+++ b/flink-sql/pom.xml
@@ -187,6 +187,26 @@
             <version>${scala.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.yzhou</groupId>
+            <artifactId>flink-connector-http-1.15</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--CDC-->
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>flink-connector-mysql-cdc</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-runtime-web_${scala.binary.version}</artifactId>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
