--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>flink-sql</module>
         <module>flink-connectors</module>
         <module>flink-dependencies</module>
+        <module>flink-datastream</module>
     </modules>
 
     <properties>
