--- a/flink-learn/pom.xml
+++ b/flink-learn/pom.xml
@@ -311,7 +311,11 @@
             <artifactId>flink-statebackend-rocksdb</artifactId>
             <version>${flink.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.yzhou</groupId>
+            <artifactId>flink-connector-http-1.15</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
 
     </dependencies>
