--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>flink-connectors</module>
         <module>flink-dependencies</module>
         <module>flink-jar</module>
+        <module>flink-udf</module>
     </modules>
 
     <properties>
