--- a/flink-learn/pom.xml
+++ b/flink-learn/pom.xml
@@ -12,15 +12,15 @@
     <artifactId>flink-learn</artifactId>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <target.java.version>1.8</target.java.version>
+        <target.java.version>11</target.java.version>
 
         <scala.version>2.12.18</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
         <log4j.version>2.18.0</log4j.version>
-        <flink.version>1.15.4</flink.version>
+        <flink.version>1.17.2</flink.version>
         <hbase.version>2.1.3</hbase.version>
         <slf4j.version>1.7.30</slf4j.version>
 
@@ -311,11 +311,11 @@
             <artifactId>flink-statebackend-rocksdb</artifactId>
             <version>${flink.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.yzhou</groupId>
-            <artifactId>flink-connector-http-1.15</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.yzhou</groupId>-->
+<!--            <artifactId>flink-connector-http-1.15</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
 
     </dependencies>
